overflow location section fix

--- a/src/sections/location-page/MapSection.css
+++ b/src/sections/location-page/MapSection.css
@@ -15,4 +15,5 @@
 
 .map-container__map img {
   min-width: 100%;
+  max-height: 100%;
 }
